--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,22 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "contos = [ x for x in machado.fileids() if 'contos' in x ]\n",
     "romances = [ x for x in machado.fileids() if 'romance' in x ]\n",
-    "textos = contos + romances"
+    "cronicas = [ x for x in machado.fileids() if 'cronicas' in x ]\n",
+    "textos = contos + romances + cronicas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_ngram(tokens, dic, ngram):\n",
+    "def create_ngram(tokens, dic, ngram):\n",
     "    seq = [ tokens[i:] for i in range(ngram) ]\n",
     "    ngrams = list(zip(*seq))\n",
     "\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,37 +67,37 @@
     "            tokens = txt.split()\n",
     "\n",
     "            for i in range(2, MAX_N+1):\\\n",
-    "                update_ngram(tokens, ngrams[i], i)\n",
+    "                create_ngram(tokens, ngrams[i], i)\n",
     "    print('.', end='')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_ngrams(dic):\n",
-    "    for ng1 in dic.keys():\n",
-    "        total = len(dic[ng1])\n",
+    "# def update_ngrams(dic):\n",
+    "#     for ng1 in dic.keys():\n",
+    "#         total = len(dic[ng1])\n",
     "\n",
-    "        for ng2 in dic[ng1].keys():\n",
-    "            dic[ng1][ng2] /= total"
+    "#         for ng2 in dic[ng1].keys():\n",
+    "#             dic[ng1][ng2] /= total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in ngrams.keys():\n",
-    "    update_ngrams(ngrams[k])"
+    "# for k in ngrams.keys():\n",
+    "#     update_ngrams(ngrams[k])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "noite e a tinta eram as suas rosas e violetas cultivava os com a moça que ele cumprimentara à tarde na rua\n"
+      "noite e a moça que o seu coração de um dia seguinte ao pé de um dia seguinte ao pé de um\n"
      ]
     }
    ],
@@ -154,11 +155,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "noite e a moça que o seu coração de um dia seguinte ao pé de um dia seguinte ao pé de um\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = [ 'noite' ]\n",
+    "for _ in range(21):\n",
+    "    n = get_next(p)\n",
+    "    if n in p[-3:]:\n",
+    "        n = get_next(p, ex=1)\n",
+    "    p.append(n)\n",
+    "print(' '.join(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import gzip\n",
     "\n",
     "pickle.dump(ngrams, open('model.pkl', 'wb'))"
    ]
